--- a/blogs/eoc.html
+++ b/blogs/eoc.html
@@ -11,17 +11,21 @@
     </h1>
     <h2>Software Engineer</h2>
     <nav>
-        <a href="../index.html">Home</a>
+        [<a href="../index.html">Home</a>]
         <!-- &nbsp;
         <a href="../index.html#blog">Blog</a>
         &nbsp;
         <a href="../index.html#contact">Contact</a> -->
     </nav>
+    
+    <hr>
 
     <h2>Epiphany of curiosity</h2>
     <h3>2024-06-29</h3>
     <h3>Author(s): Ankit Dwivedi</h3>
 
+    <hr>
+    
     <p>
         Today, I had an extraordinary realization about myself. Out of nowhere, I remembered some of the questions I used to ask my sister about the world, like, "If Earth is an oblate spheroid floating in space, then why doesn't its ocean escape its surface?", "If the Sun has such strong gravity, then why don't all the planets fall into it?", and "If Earth and the Moon both have gravity, why haven't they collided yet?" At the time, my sister was in 9th grade, so it's clear now why she couldn't answer them. However, what's remarkable is that today, I know the mathematically correct answers to these questions, but it's too late.
     </p>
