--- a/blogs/nde.html
+++ b/blogs/nde.html
@@ -11,16 +11,21 @@
     </h1>
     <h2>Software Engineer</h2>
     <nav id="top">
-        <a href="../index.html">Home</a>
+        [<a href="../index.html">Home</a>]
         <!-- &nbsp;
         <a href="../index.html#blog">Blog</a>
         &nbsp;
         <a href="../index.html#contact">Contact</a> -->
     </nav>
 
+    <hr>
+
     <h2>A near-death experience</h2>
     <h3>2024-06-29</h3>
     <h3>Author(s): Ankit Dwivedi</h3>
+
+    <hr>
+    
     <p>It is a gift that I'm able to read and write this. It is a gift that my physical, verbal, and logical abilities are still intact after the head injury I had gone through a week ago. I lost consciousness back then, and thanks to my friends who took me to the hospital in time. I had lost a lot of blood and what they did was nothing short of life-saving, if not entirely so, and I'll be forever grateful to them.</p>
 
     <p>From 2:30 AM to 7:00 AM, I was unconscious, and when I woke up, it felt very embarrassing first of all. I didn't want to be such a bother, but I thought that maybe because I was on medication. But when I came back to my room and processed all the information... I just looked at my hands and I closed it and opened it again, and after a brief moment of realisation I thanked god, I thanked the energy that's running this universe, grateful that even after such an incident, my brain was still able to perform all the functions normally.</p>
