--- a/blogs/vpoi.html
+++ b/blogs/vpoi.html
@@ -11,16 +11,20 @@
     </h1>
     <h2>Software Engineer</h2>
     <nav id="top">
-        <a href="../index.html">Home</a>
+        [<a href="../index.html">Home</a>]
         <!-- &nbsp;
         <a href="../index.html#blog">Blog</a>
         &nbsp;
         <a href="../index.html#contact">Contact</a> -->
     </nav>
 
+    <hr>
+
     <h2>I attended the Lok Sabha proceedings at the Parliament of India</h2>
     <h3>2024-06-29</h3>
     <h3>Author(s): Ankit Dwivedi</h3>
+
+    <hr>
 
     <p>
         I had the opportunity to attend the Lok Sabha proceedings on July 2, 2024, and I am really overwhelmed and fascinated by the experience, so much so that it still feels unreal. I saw the Prime Minister of India, Shri Narendra Modi ji, from about 10 feet away, as well as the Leader of Opposition Shri Rahul Gandhi ji, and many other prominent leaders including the Home Minister Shri Amit Shah ji, and the Speaker of the House Shri Om Birla ji. It was amazing, and here are some of the stories I’d like to share with you all.
