tech skills in table format

--- a/index.html
+++ b/index.html
@@ -38,23 +38,30 @@
 
         <section id="technical">
             <h2>Technical Skills</h2>
-            <ul>
-                <li>
-                    <strong>Languages:</strong> C/C++, Java, Python, Go, Rust, JavaScript, TypeScript, x86-64 Assembly
-                </li>
-                <li>
-                    <strong>Frameworks/Libraries:</strong> React.js, Next.js, Node.js, Express.js, Spring Boot, PyTorch, SentenceTransformers, Flask, Tailwind CSS, Bootstrap, jQuery
-                </li>
-                <li>
-                    <strong>Web Technologies:</strong> HTML5, CSS3, REST APIs, MERN Stack (MongoDB, Express.js, React.js, Node.js)
-                </li>
-                <li>
-                    <strong>Tools & Platforms:</strong> Git, Docker, Kubernetes, Google Cloud Platform (GCP), Linux, LaTeX, SQL
-                </li>
-                <li>
-                    <strong>Machine Learning:</strong> RAG Pipelines, LLM Fine-Tuning (QLoRA), Deep Learning, NLP, Generative AI
-                </li>
-            </ul>
+            <table border="1" cellpadding="5" cellspacing="0">
+                <tbody>
+                    <tr>
+                        <td><strong>Languages</strong></td>
+                        <td>C/C++, Java, Python, Go, Rust, JavaScript, TypeScript, x86-64 Assembly</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Frameworks/Libraries</strong></td>
+                        <td>React.js, Next.js, Node.js, Express.js, Spring Boot, PyTorch, SentenceTransformers, Flask, Tailwind CSS, Bootstrap, jQuery</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Web Technologies</strong></td>
+                        <td>HTML5, CSS3, REST APIs, MERN Stack (MongoDB, Express.js, React.js, Node.js)</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Tools & Platforms</strong></td>
+                        <td>Git, Docker, Kubernetes, Google Cloud Platform (GCP), Linux, LaTeX, SQL</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Machine Learning</strong></td>
+                        <td>RAG Pipelines, LLM Fine-Tuning (QLoRA), Deep Learning, NLP, Generative AI</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <hr>
