fun projects added

--- a/index.html
+++ b/index.html
@@ -73,12 +73,52 @@
 
         <hr>
 
+
+
         <section id="projects">
             <h2>Projects</h2>
+            <p>
+                I tinker with a few things when I'm bored. The serious documentation is on GitHub, where it belongs.
+            </p>
+            <h3>Core Projects</h3>
             <p>Well, I am quite unsure if I should add them or not as most of them are current <strong>not-live</strong> due to different issues like exhausted free-tier credits, etc.</p>
-            <p>But you can certainly check them out on my <a href="https://github.com/dwivedi-ai">GitHub</a>.</p>
-        </section>
+            
+            <h3>Avg Projects</h3>
+            <ul>
+                <li>
+                    <strong>Srimad Bhagavatam RAG Chatbot:</strong> A total vibe-coded project. I wanted to see if an AI could learn reverence, so I built this RAG chatbot that answers questions strictly from the holy scriptures.
+                    <a href="https://sb-rag.onrender.com/" target="_blank">Live Link</a>
+                    &nbsp;
+                    <a href="https://github.com/dwivedi-ai/srimadbhagvat_rag" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <strong>ACS Language Compiler:</strong> Wrote a custom language (ACS) and its compiler. Instead of building a whole backend from scratch, it cleverly transpiles the ACS code to C++ and lets the perfected g++ compiler do the heavy lifting. Work smart, not hard.
+                    <a href="https://github.com/dwivedi-ai/acs" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <strong>Enigma Post Systems:</strong> One of my first full-stack projects, a MERN social media app built in 5 days when I was just starting out. The code is a mess and it can't scale, but hey, it worked. A true rite of passage.
+                    <a href="https://github.com/dwivedi-ai/enigmapost" target="_blank">GitHub</a>
+                </li>
+            </ul>
 
+            <h3>Joke Projects (PS: DON'T TAKE THEM SERIOUSLY)</h3>
+            <p>And here are some things for you to tinker around, mostly for a quick laugh.</p>
+            <ul>
+                <li>
+                    <strong>Unbeatable Tic-Tac-Toe:</strong> An AI player using Minimax with Alpha-Beta pruning. Go ahead, try to win. It's a great way to waste your time and question your intelligence.
+                    <a href="https://dwivedi-ai.github.io/TicTacToe-AI/" target="_blank">Live Link</a> | 
+                    <a href="https://github.com/dwivedi-ai/TicTacToe-AI" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <strong>Fake Hacking Simulator:</strong> Looks like a suspicious hacking tool from a 90s movie. Click at your own risk (don't worry, it's safe... probably).
+                    <a href="https://github.com/dwivedi-ai/FakeHack" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <strong>Background Colour Changer:</strong> A website that changes its background color when you tap it. That's it. That's the whole project.
+                    <a href="https://dwivedi-ai.github.io/BackgroundColourChanger/" target="_blank">Live Link</a>
+                </li>
+            </ul>
+        </section>
         <hr>
         
         <section id="por">
