updated projects, fixed blog dates and technical skills

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <tbody>
                     <tr>
                         <td><strong>Languages</strong></td>
-                        <td>C/C++, Java, Python, Go, Rust, JavaScript, TypeScript, x86-64 Assembly</td>
+                        <td>C/C++, Java, Python, Go, Rust, JavaScript, TypeScript, x86-64 Assembly, SQL</td>
                     </tr>
                     <tr>
                         <td><strong>Frameworks/Libraries</strong></td>
@@ -53,8 +53,16 @@
                         <td>HTML5, CSS3, REST APIs, MERN Stack (MongoDB, Express.js, React.js, Node.js)</td>
                     </tr>
                     <tr>
+                        <td><strong>Data & Big Data</strong></td>
+                        <td>Hadoop, Spark, Kafka, ETL Pipelines</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Cloud Platforms</strong></td>
+                        <td>GCP, AWS</td>
+                    </tr>
+                    <tr>
                         <td><strong>Tools & Platforms</strong></td>
-                        <td>Git, Docker, Kubernetes, Google Cloud Platform (GCP), Linux, LaTeX, SQL</td>
+                        <td>Git, LaTeX, Linux, Docker, Kubernetes</td>
                     </tr>
                     <tr>
                         <td><strong>Machine Learning</strong></td>
@@ -73,16 +81,29 @@
 
         <hr>
 
-
-
         <section id="projects">
             <h2>Projects</h2>
             <p>
                 I tinker with a few things when I'm bored. The serious documentation is on GitHub, where it belongs.
             </p>
+
+
             <h3>Core Projects</h3>
             <p>Well, I am quite unsure if I should add them or not as most of them are current <strong>not-live</strong> due to different issues like exhausted free-tier credits, etc.</p>
             
+
+            <h3>Data Engineering Projects</h3>
+            <ul>
+                <li>
+                    <strong>Enterprise Data Lake Migration:</strong> AWS, Spark, Hadoop, Kafka. Migrated on-prem databases to an S3-based data lake using Spark with Kafka for streaming ingestion. Tested portability on MinIO.
+                    <a href="https://github.com/dwivedi-ai/edlm" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <strong>Cloud Data Warehouse Modernization:</strong> PostgreSQL, Airflow, Docker, Python, Tableau. Built an ETL pipeline with Airflow + Python to clean and load sales data into PostgreSQL. Added curated tables and simple dashboards.
+                    <a href="https://github.com/dwivedi-ai/cdw-modernization" target="_blank">GitHub</a>
+                </li>
+            </ul>
+
             <h3>Avg Projects</h3>
             <ul>
                 <li>
@@ -190,7 +211,7 @@
     <footer>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can contact me through email at <a href="mailto:codewithankitdwivedi@gmail.com">codewithankitdwivedi@gmail.com</a></p>
+            <p>You can contact me through email at <a href="mailto:ankitdwivedi25@protonmail.com">ankitdwivedi25@protonmail.com</a> &nbsp; (skip the small talk tho, get to the point;)</p>
             <p>Or just follow me on X - <a href="https://x.com/@AnkitDwivedi25">@AnkitDwivedi25</a> and <a href="https://www.linkedin.com/in/ankit-dwivedi-kiit/">LinkedIn</a>.</p>
         </section>
         <p><a href="#top">Go to top</a></p>
